--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ general:
 
 dependencies:
   pre:
+    - envsubst < settings.xml > ~/.m2/settings.xml
     - "(mvn clean install site -Dmaven.test.skip || : ) &> /dev/null"
 
 deployment:
