--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>20090211</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
 
     <!-- mvn surefire-report:report -->
