--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ general:
 
 dependencies:
   pre:
-    - sudo apt-get install -y gpg
+#    - sudo apt-get install -y gpg
     - gpg --import < keys.gpg
     - envsubst < settings.xml > ~/.m2/settings.xml
     - "(mvn -Dgpg.passphrase=${GPG_KEY} clean install site -Dmaven.test.skip || : ) &> /dev/null"
