--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ general:
 dependencies:
   pre:
 #    - sudo apt-get install -y gpg
-    - gpg --import < keys.gpg
+    - ./gen-key.sh ${GPG_PASSPHRASE}
     - envsubst < settings.xml > ~/.m2/settings.xml
     - "(mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean install site -Dmaven.test.skip || : ) &> /dev/null"
 
