--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.cazcade</groupId>
     <artifactId>dollar-vertx</artifactId>
-    <version>0.0.8</version>
+    <version>0.0.9</version>
     <name>Dollar Vert.x</name>
     <description>Json and Map manipulation made easy for Vert.x</description>
     <contributors>
@@ -206,6 +206,11 @@
                         <groupId>org.apache.velocity</groupId>
                         <artifactId>velocity</artifactId>
                         <version>1.7</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.maven.doxia</groupId>
+                        <artifactId>doxia-module-markdown</artifactId>
+                        <version>1.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
