--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.cazcade</groupId>
-    <artifactId>dollar-vertx</artifactId>
-    <version>0.0.11</version>
-    <name>Dollar Vert.x</name>
-    <description>Json and Map manipulation made easy for Vert.x</description>
+    <artifactId>dollar</artifactId>
+    <version>0.0.12</version>
+    <name>Dollar</name>
+    <description>Lightweight, dynamic data oriented Java</description>
     <contributors>
         <contributor>
             <name>Neil Ellis</name>
@@ -32,9 +32,9 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/cazcade/dollar_vertx</url>
-        <connection>scm:git:git@github.com:cazcade/dollar_vertx.git</connection>
-        <developerConnection>scm:git:git@github.com:cazcade/dollar_vertx.git</developerConnection>
+        <url>https://github.com/cazcade/dollar</url>
+        <connection>scm:git:git@github.com:cazcade/dollar.git</connection>
+        <developerConnection>scm:git:git@github.com:cazcade/dollar.git</developerConnection>
     </scm>
 
     <properties>
@@ -57,6 +57,28 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.6.0</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -234,9 +256,9 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-cazcade-maven-dollar_vertx</id>
-            <name>cazcade-maven-dollar_vertx</name>
-            <url>https://api.bintray.com/maven/cazcade/maven/dollar_vertx</url>
+            <id>bintray-cazcade-maven-dollar</id>
+            <name>cazcade-maven-dollar</name>
+            <url>https://api.bintray.com/maven/cazcade/maven/dollar</url>
         </repository>
     </distributionManagement>
 
