--- a/pom.xml
+++ b/pom.xml
@@ -206,7 +206,7 @@
                     <checkinComment>Publishing javadoc for ${project.artifactId}:${project.version}</checkinComment>
                     <content>${project.reporting.outputDirectory}</content>
                     <skipDeletedFiles>true</skipDeletedFiles>
-                    <pubScmUrl>scm:git:git@github.com:cazcade/dollar_vertx.git</pubScmUrl>
+                    <pubScmUrl>scm:git:git@github.com:cazcade/dollar.git</pubScmUrl>
                     <scmBranch>gh-pages</scmBranch>
                     <!-- branch with static site -->
                 </configuration>
