--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,8 @@ dependencies:
     - ./gen-key.sh ${GPG_PASSPHRASE}
     - envsubst < settings.xml > ~/.m2/settings.xml
     - "(mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean install site -Dmaven.test.skip || : ) &> /dev/null"
+  override:
+    - true
 
 deployment:
   staging:
