--- a/circle.yml
+++ b/circle.yml
@@ -37,7 +37,7 @@ deployment:
     commands:
         - git config --global user.email "neil@cazcade.com"
         - git config --global user.name "Neil Ellis"
-        - mvn versions:set -DnewVersion=0.0.${CIRCLE_BUILD_NUMBER}
+        - mvn versions:set -DnewVersion=0.0.${CIRCLE_BUILD_NUM}
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
         - mvn versions:commit
