--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dollar</artifactId>
         <groupId>com.cazcade</groupId>
-        <version>0.0.19</version>
+        <version>0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.cazcade</groupId>
             <artifactId>dollar-core</artifactId>
-            <version>0.0.19</version>
+            <version>0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
