--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.cazcade</groupId>
     <artifactId>dollar</artifactId>
-    <version>0.0.19</version>
+    <version>0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Dollar</name>
