--- a/circle.yml
+++ b/circle.yml
@@ -40,5 +40,5 @@ deployment:
         - mvn versions:set -DnewVersion=0.0.${CIRCLE_BUILD_NUM}
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
-        - mvn versions:commit
+#        - mvn versions:commit
         - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} install scm-publish:publish-scm deploy site
