--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
 #    - sudo apt-get install -y gpg
     - ./gen-key.sh ${GPG_PASSPHRASE}
     - envsubst < settings.xml > ~/.m2/settings.xml
-    - "(mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean install site -Dmaven.test.skip || : ) &> /dev/null"
+    - "(mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean package -Dmaven.test.skip || : ) &> /dev/null"
   override:
     - echo ""
 
