--- a/pom.xml
+++ b/pom.xml
@@ -317,8 +317,9 @@
 
 
     <distributionManagement>
-        <site>
-        <id>http://cazcade.github.io/dollar</id>
+        <!--<site>-->
+        <!--<id>http://cazcade.github.io/dollar</id>-->
+        <!--</site>-->
         <repository>
             <id>bintray-cazcade-maven-dollar</id>
             <name>cazcade-maven-dollar</name>
