--- a/pom.xml
+++ b/pom.xml
@@ -82,23 +82,23 @@
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.14</version>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.7</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-changes-plugin</artifactId>
-                <version>2.11</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>changes-report</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
+            <!--<version>2.7</version>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-changes-plugin</artifactId>-->
+            <!--<version>2.11</version>-->
+            <!--<reportSets>-->
+            <!--<reportSet>-->
+            <!--<reports>-->
+            <!--<report>changes-report</report>-->
+            <!--</reports>-->
+            <!--</reportSet>-->
+            <!--</reportSets>-->
+            <!--</plugin>-->
             <!--<plugin>-->
             <!--<groupId>org.apache.maven.plugins</groupId>-->
             <!--<artifactId>maven-changelog-plugin</artifactId>-->
