--- a/dollar-examples/pom.xml
+++ b/dollar-examples/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>dollar-core</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.7</version>
+        </dependency>
     </dependencies>
 </project>
