--- a/pom.xml
+++ b/pom.xml
@@ -86,19 +86,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>2.7</version>
-                <!--<reportSets>-->
-                <!--<reportSet>-->
-                <!--<reports>-->
-                <!--<report>project-team</report>-->
-                <!--<report>mailing-list</report>-->
-                <!--<report>cim</report>-->
-                <!--<report>issue-tracking</report>-->
-                <!--<report>license</report>-->
-                <!--<report>scm</report>-->
-                <!--<report>index</report>-->
-                <!--</reports>-->
-                <!--</reportSet>-->
-                <!--</reportSets>-->
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>project-team</report>
+                            <report>mailing-list</report>
+                            <report>cim</report>
+                            <report>issue-tracking</report>
+                            <report>license</report>
+                            <report>scm</report>
+                            <report>index</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
