--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/cazcade/dollar</url>
+        <url>https://github.com/cazcade/dollar/blob/master/</url>
         <connection>scm:git:git@github.com:cazcade/dollar.git</connection>
         <developerConnection>scm:git:git@github.com:cazcade/dollar.git</developerConnection>
     </scm>
@@ -91,11 +91,13 @@
                         <reports>
                             <report>project-team</report>
                             <report>mailing-list</report>
-                            <report>cim</report>
                             <report>issue-tracking</report>
                             <report>license</report>
                             <report>scm</report>
                             <report>index</report>
+                            <report>summary</report>
+                            <report>cim</report>
+                            <report>plugins</report>
                         </reports>
                     </reportSet>
                 </reportSets>
@@ -204,15 +206,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9</version>
-                <!--<configuration>-->
-                <!--<doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>-->
-                <!--<docletArtifact>-->
-                <!--<groupId>ch.raffael.pegdown-doclet</groupId>-->
-                <!--<artifactId>pegdown-doclet</artifactId>-->
-                <!--<version>1.1</version>-->
-                <!--</docletArtifact>-->
-                <!--<useStandardDocletOptions>true</useStandardDocletOptions>-->
-                <!--</configuration>-->
+                <configuration>
+                    <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
+                    <docletArtifact>
+                        <groupId>ch.raffael.pegdown-doclet</groupId>
+                        <artifactId>pegdown-doclet</artifactId>
+                        <version>1.1</version>
+                    </docletArtifact>
+                    <useStandardDocletOptions>true</useStandardDocletOptions>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -267,21 +269,21 @@
                 <version>3.4</version>
                 <dependencies>
                     <dependency>
-                        <groupId>lt.velykis.maven.skins</groupId>
-                        <artifactId>reflow-velocity-tools</artifactId>
-                        <version>1.1.1</version>
-                    </dependency>
-                    <!-- Reflow skin requires Velocity >= 1.7  -->
-                    <dependency>
-                        <groupId>org.apache.velocity</groupId>
-                        <artifactId>velocity</artifactId>
-                        <version>1.7</version>
-                    </dependency>
-                    <dependency>
                         <groupId>org.apache.maven.doxia</groupId>
                         <artifactId>doxia-module-markdown</artifactId>
                         <version>1.3</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.apache.maven.skins</groupId>
+                        <artifactId>maven-fluido-skin</artifactId>
+                        <version>1.3.1</version>
+                    </dependency>
+                    <!-- Reflow skin requires Velocity >= 1.7  -->
+                    <!--<dependency>-->
+                    <!--<groupId>org.apache.velocity</groupId>-->
+                    <!--<artifactId>velocity</artifactId>-->
+                    <!--<version>1.7</version>-->
+                    <!--</dependency>-->
                 </dependencies>
             </plugin>
             <plugin>
