--- a/dollar-core/pom.xml
+++ b/dollar-core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.cazcade</groupId>
+        <groupId>technology.neil</groupId>
         <artifactId>dollar</artifactId>
         <version>0-SNAPSHOT</version>
     </parent>
